--- a/index.html
+++ b/index.html
@@ -17,20 +17,13 @@
     }
 
     html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: system-ui, sans-serif;
-
-  /* ✅ Sample background for testing frosted glass */
-  background: url('https://picsum.photos/1600/900') no-repeat center center fixed;
-  background-size: cover;
-
-  /* Fallback gradient if image fails */
-  background-color: #0a0a0a;
-  background-image: linear-gradient(135deg, #06444a, #55c1b1);
-}
-
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: system-ui, sans-serif;
+      /* Keep parent transparent—frosting happens inside the popup */
+      background: transparent;
+    }
 
     /* Outer popup */
     #chatbot-popup {
