--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       height: calc(100% - var(--header-height));
       display: flex;
       flex-direction: column;
-      padding-bottom: 30%;
+      padding-bottom: 0;
       box-sizing: border-box;
       background: transparent !important;
     }
@@ -90,6 +90,11 @@
     #webchat .webchat__bubble__content {
       padding: 8px 12px !important;
     }
+      
+  #webchat .webchat__send-box {
+    max-height: 60px !important;
+  }
+
   </style>
 </head>
 <body>
@@ -118,9 +123,6 @@
       botAvatarImage: "https://i.imgur.com/pKReqIG.png",
       botAvatarInitials: "B",
       botAvatarBackgroundColor: "#FFFFFF",
-
-      // User avatar
-      userAvatarInitials: "U",
 
       // Bot bubbles (keep colors)
       bubbleBackground: "#eef8f7",
@@ -185,3 +187,4 @@
   </script>
 </body>
 </html>
+
