--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ width: 400px; height: 600px;
 
     /* Header bar */
     #chatbot-header {
-      background: rgba(85, 193, 177, 0.6);
+      background: #06444A;
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
       padding: 12px;
@@ -103,7 +103,7 @@ flex: 0 0 auto;
   <!-- Chatbot Container -->
   <div id="chatbot-popup" role="complementary" aria-label="Chat Assistant">
     <div id="chatbot-header">
-      <span>Assistant</span>
+      <span>BE.Bot (beta)</span>
       <div>
         <button onclick="restartConversation()">⟳</button>
       </div>
@@ -188,5 +188,6 @@ flex: 0 0 auto;
   </script>
 </body>
 </html>
+
 
 
