--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-width: 400px; height: 600px;
+width: 100%; height: 100%;
 
       background: rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(12px);
@@ -188,6 +188,7 @@ flex: 0 0 auto;
   </script>
 </body>
 </html>
+
 
 
 
