--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Static Chatbot — Frosted Glass</title>
-
-  <!-- Bot Framework Web Chat -->
   <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
 
   <style>
@@ -14,7 +12,7 @@
       --header-textColor: #fff;
       --chat-width: 100%;
       --chat-height: 100vh;
-      --header-height: 48px;
+      --header-height: 48px; /* harmless now */
     }
 
     html, body {
@@ -22,44 +20,33 @@
       padding: 0;
       font-family: system-ui, sans-serif;
       height: 100%;
+    }
 
-    /* Outer popup with frosted glass */
     #chatbot-popup {
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-width: 100%; height: 100%;
-
+      width: 400px;
+      height: 600px;
       background: rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-
-      border-radius: 0px;
+      border-radius: 0;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       overflow: hidden;
       z-index: 999;
     }
 
-    /* Header bar */
-    #chatbot-header {
-      background: #06444A;
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      padding: 12px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: var(--header-textColor);
-      height: var(--header-height);
-    }
+    /* No header in this variant */
 
-    /* Webchat container */
+    /* Webchat container — use full height */
     #webchat {
-      height: calc(100% - var(--header-height));
+      height: 100%;
       display: flex;
       flex-direction: column;
       padding-bottom: 0;
+      margin-bottom: 0;
       box-sizing: border-box;
       background: transparent !important;
     }
@@ -69,7 +56,8 @@ width: 100%; height: 100%;
       background: rgba(255, 255, 255, 0.25) !important;
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-flex: 1 1 auto; /* transcript grows */ overflow-y: auto; /* scroll if needed */
+      flex: 1 1 auto;
+      overflow-y: auto;
     }
 
     button {
@@ -85,22 +73,33 @@ flex: 1 1 auto; /* transcript grows */ overflow-y: auto; /* scroll if needed */
     #webchat .webchat__bubble {
       max-width: 85% !important;
       margin: 8px !important;
-      border-radius: 0px !important;
+      border-radius: 0 !important;
     }
     #webchat .webchat__bubble__content {
       padding: 8px 12px !important;
     }
-      
-  #webchat .webchat__send-box {
-    min-height: 100px !important;
-flex: 0 0 auto;
-  }
 
+    /* Keep the send box tight (optional) */
+    .webchat__send-box-wrapper,
+    .webchat__send-box,
+    .webchat__send-box-text-box {
+      margin: 0 !important;
+      padding: 0 !important;
+      height: auto !important;
+      box-sizing: border-box !important;
+    }
+    .webchat__send-box-text-box > input,
+    .webchat__send-box-text-box > textarea {
+      padding: 4px 8px !important;
+      margin: 0 !important;
+      height: 32px !important;
+      line-height: 1.2 !important;
+    }
+
+    #webchat > * { flex-shrink: 0; }
   </style>
 </head>
 <body>
-
-  <!-- Chatbot Container -->
   <div id="chatbot-popup" role="complementary" aria-label="Chat Assistant">
     <div id="webchat" role="main"></div>
   </div>
@@ -111,31 +110,28 @@ flex: 0 0 auto;
     const styleOptions = {
       accent: "#55C1B1",
       hideUploadButton: true,
-      sendBoxHeight: 100,
+      sendBoxHeight: 48,
       backgroundColor: "transparent",
 
-      // Bot avatar
       botAvatarImage: "https://i.imgur.com/pKReqIG.png",
       botAvatarInitials: "B",
       botAvatarBackgroundColor: "#FFFFFF",
 
-      // Bot bubbles (keep colors)
       bubbleBackground: "#eef8f7",
       bubbleTextColor: "#06444A",
-
-      // User bubbles (keep colors)
       bubbleFromUserBackground: "#06444A",
       bubbleFromUserTextColor: "#ffffff",
 
-      // Send box styling (frosted)
       sendBoxBackground: "rgba(255,255,255,0.25)",
       sendBoxTextColor: "#06444A",
       sendBoxBorderTop: "solid 1px #55C1B1",
       sendBoxPlaceholderColor: "#032225"
     };
 
-    // Force transcript/root transparent
     const styleSet = window.WebChat.createStyleSet(styleOptions);
+
+    styleSet.sendBox = { ...styleSet.sendBox, padding: 0, margin: 0, height: 'auto' };
+    styleSet.sendBoxTextArea = { ...styleSet.sendBoxTextArea, padding: '4px 8px', margin: 0, height: '32px', lineHeight: '1.2' };
     styleSet.root = { ...styleSet.root, backgroundColor: 'transparent' };
     styleSet.transcript = { ...styleSet.transcript, backgroundColor: 'transparent' };
 
@@ -158,16 +154,6 @@ flex: 0 0 auto;
       });
     }
 
-    async function restartConversation() {
-      const response = await fetch(tokenEndpoint);
-      const { token } = await response.json();
-      const newDirectLine = window.WebChat.createDirectLine({ token });
-      window.WebChat.renderWebChat(
-        { directLine: newDirectLine, styleOptions, styleSet, store: createCustomStore(), locale: "en-US" },
-        document.getElementById("webchat")
-      );
-    }
-
     async function initializeChat() {
       const response = await fetch(tokenEndpoint);
       const { token } = await response.json();
@@ -182,8 +168,3 @@ flex: 0 0 auto;
   </script>
 </body>
 </html>
-
-
-
-
-
