--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 400px;
-      height: 600px;
+      width: 100%;
+      height: 100%;
       background: rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
@@ -168,3 +168,4 @@
   </script>
 </body>
 </html>
+
