--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       height: 32px !important;
       line-height: 1.2 !important;
     }
+    .webchat__send-icon { fill: #ffffff !important; }
 
     #webchat > * { flex-shrink: 0; }
   </style>
@@ -168,4 +169,5 @@
   </script>
 </body>
 </html>
+
 
